Further simplify the test